fix index routes and clear horizontal scroll bars in nav

--- a/src/less/styles.less
+++ b/src/less/styles.less
@@ -149,6 +149,9 @@ nav.navbar.navbar-default.green-bar {
   padding-right: 0;
   padding-left: 0;
 }
+#navigation-menu {
+  overflow: hidden;
+}
 .minutes {
   p {
     color: #444;
